# LeviLaunchroid

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/inbuiltmods/src/fps/: fps.cpp
app/src/main/res/drawable/: bg_libs_repair_dialog.xml  bg_libs_repair_icon.xml  bg_libs_repair_progress.xml  bg_loading_progress.xml  bg_loading_track.xml  bg_minecraft_loading_terminal.xml  ic_monitor.xml  ic_moon.xml  ic_sun.xml  ic_youtube.xml
app/src/main/res/layout/: activity_about.xml  activity_crash.xml  activity_instance_settings.xml  activity_main.xml  activity_minecraft_loading.xml  activity_settings.xml  dialog_install_progress.xml  dialog_libs_repair.xml  dialog_loading.xml  item_instance_card.xml  item_instance_popup.xml
app/src/main/res/menu/: language_menu.xml
app/src/main/res/values/: strings.xml  styles.xml  theme.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-idn/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-v27/: styles.xml  theme.xml
app/src/main/res/values-v29/: theme.xml
app/src/main/res/values-v31/: theme.xml
app/src/main/res/values-v35/: theme.xml
app/src/main/res/values-zh-rCN/: strings.xml
gradle/: libs.versions.toml
(+58 files in other folders)
